--- a/nameGenerator/names/templates/names/index.html
+++ b/nameGenerator/names/templates/names/index.html
@@ -8,7 +8,11 @@
     </head>
     <body>
         <h1>Names Generator</h1>
-        <p>{{ name }}</p>
+        {% if name %}
+            <p>{{ name }}</p>
+        {% else %}
+            <p>Not generated name yet.</p>
+        {% endif %}
         <form action="{% url 'names:generate' %}" method="POST">
             {% csrf_token %}
             <button type="submit">Generate name</button>
