copy to clipboard added

--- a/nameGenerator/names/static/names/style.css
+++ b/nameGenerator/names/static/names/style.css
@@ -42,3 +42,16 @@ button {
 button:hover {
     background-color: #ECEDEE;
 }
+
+.buttons {
+    display: flex;
+    width: 20em;
+    justify-content: space-between;
+}
+
+#copied {
+    margin: 0;
+    padding: 0;
+    margin-left: 2em;
+    color: red;
+}
